tdf#163086 downscale excessively large pinned document icons

For some unknown reason to me, some of the SVG icon sets have their
pinned document icons set to a viewport of 64x64. So downscale such
icons to more closely match the size of the pinned document icons
in the PNG icon sets.

Change-Id: Ic7e51ff194968e09d13a5bff341ccbbf80cfb26a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173765
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>